workspace = { members = ["xtask"] }

[package]
name = "bldb"
authors = ["Oxide Computer Company"]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[features]
default_features = []
spin_prompt = []
pulse_prompt = []

[dependencies]
bit_field = "0.10"
bitflags = "2.9.0"
bitstruct = "0.1"
cpio_reader = "0.1"
goblin = { version = "0.9", default-features = false, features = [
    "endian_fd",
    "elf64",
    "elf32",
    "alloc",
] }
iced-x86 = { version = "1.21.0", features = [
    "decoder",
    "gas",
    "no_std",
], default-features = false }
miniz_oxide = "0.8"
seq-macro = "0.3"
sha2 = { version = "0.10.8", default-features = false, features = [
    "force-soft",
] }
spin = { version = "0.10.0", default-features = false, features = [
    "barrier",
    "mutex",
    "once",
    "spin_mutex",
    "ticket_mutex",
] }
static_assertions = "1.1"
x86 = "0.52"
xmodem = { git = "https://github.com/oxidecomputer/xmodem.rs", default-features = false }
zmodem2 = { git = "https://github.com/oxidecomputer/zmodem2", branch = "nostd", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
